Bug Fix #3079 - Set Edit UI word wrapping issues

--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -534,6 +534,10 @@
       font-size: 0.9em;
     }
 
+    a.editable{
+      word-wrap:break-word;
+    }
+
     .lead-label{
       width:250px;
     }
